# gx2gl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.py  compile.sh
cmake/: devkitpro_toolchain.cmake
docs/: GX2GL_api.md  wuhb_template.md
include/GLES2/: gl2.h  gl2ext.h  gl2platform.h
include/gl/: gl.h
include/gx2gl/: proc.h  sdl_bridge.h
src/core/: gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_draw.cpp  gl_draw.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_get.cpp  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vao.cpp  gl_vao.h  gx2gl_cafeglsl.cpp  gx2gl_cafeglsl.h  gx2gl_proc.cpp  gx2gl_sdl_bridge.cpp  gx2gl_shader_compat.cpp  gx2gl_shader_compat.h  main.cpp
src/endian/: endian.h
src/mem/: gl_mem.cpp  gl_mem.h
src/state/: gl_state.cpp  gl_state.h
templates/wuhb/cafeglsl/content/: _copy_glslcompiler.rpl_here.txt
tests/: gles2_compile.cpp  test_main.cpp
tests/shaders/: smoke_triangle.ps  smoke_triangle.vs
tools/: build_smoke_gsh.py  generate_gx2gl_proc_table.py  stage_wuhb_content.py
